--- a/Exercise_02/app/src/main/AndroidManifest.xml
+++ b/Exercise_02/app/src/main/AndroidManifest.xml
@@ -10,14 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Exercise_02"
+        android:theme="@style/LangoTheme"
         tools:targetApi="31">
         <activity
-            android:name=".RigthActivity"
-            android:exported="false" />
+            android:name=".RightActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".LeftActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
